# dreamwell

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
backend/: requirements.txt  run.sh
backend/app/: character_import.py  config.py  database.py  facts.py  inference.py  main.py  models.py  prompts.py  queue.py  schemas.py  settings_service.py  summarize.py
backend/app/routers/: characters.py  chats.py  settings.py
crates/dreamwell-state/: Cargo.toml
crates/dreamwell-state/src/: apply.rs  format.rs  lib.rs  prompt.rs  resolve.rs  schema.rs
crates/dreamwell-types/: Cargo.toml
crates/dreamwell-types/src/: game_elements.rs  game_import.rs  game_presets.rs  iw_import.rs  iw_types.rs  lib.rs  macros.rs  sampling.rs  scenario_export.rs  scenario_iw.rs  serde_helpers.rs  state_payload.rs
crates/dreamwell-units/: Cargo.toml
crates/dreamwell-units/src/: display.rs  lib.rs
crates/frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  manifest.json  manifest.webmanifest  styles.css  sw.js
crates/frontend/src/: api.rs  app_sync.rs  auth.rs  auto_grow.rs  build_info.rs  chat_sync.rs  dice_ui.rs  game_create_ui.rs  game_presets_ui.rs  game_setup_ui.rs  game_sync.rs  game_ui.rs  generation_ui.rs  install.rs  item_list.rs  lib.rs  markdown.rs  message_menu.rs  nav_ui.rs  notifications.rs  queue_ui.rs  resume_policy.rs  router.rs  scenario_editors.rs  scenario_state_ui.rs  scenario_ui.rs  sidebar.rs  sse_client.rs  state_ui.rs  stories_ui.rs  story_save.rs  story_sync.rs  summary_ui.rs  thought_ui.rs  title_editor.rs  variable_updates_ui.rs  variables.rs  variables_ui.rs  version_watch.rs  view_scroll.rs
crates/server/: Cargo.toml  build.rs
crates/server/migrations/: 001_init.sql  002_stories.sql  003_st_defaults.sql  004_persona_description.sql  005_thought_blocks.sql  006_message_thoughts.sql  007_rename_facts_to_variables.sql  008_message_variable_updates.sql  009_chat_archive.sql  010_context_tokens.sql  011_summarize_adaptive.sql  012_message_in_summary.sql  013_variables_recheck.sql  014_story_variables.sql  015_story_chapter_prose_summary.sql  016_story_beat_mechanical.sql  017_variable_scopes.sql  018_story_tracked_details.sql  019_games.sql  020_game_model_overrides.sql  021_game_character_id.sql  022_scenarios.sql  023_scenario_traits.sql  024_game_opening_message.sql  025_session_state.sql  026_game_opening_turn.sql  027_inference_connections.sql  028_inference_json_format.sql  029_iw_scenario_fields.sql  030_game_system_rolls.sql  031_story_game_archive.sql  032_game_elements.sql  033_inference_connection_model.sql  034_inference_tool_call_parser.sql  035_game_turn_guidance.sql  036_inference_connection_generation.sql  037_scenario_pc_initial_state.sql  038_scenario_opening_guidance.sql  040_inference_connection_fallback.sql  041_generation_job_inference.sql  (+6 more)
crates/server/src/: build_info.rs  character_import.rs  chat_prompts.rs  chat_prose_agent.rs  chat_state.rs  config.rs  db.rs  error.rs  facts.rs  game_db.rs  game_mechanics.rs  game_prompts.rs  game_prose_recheck.rs  game_repro.rs  game_resolution.rs  game_state.rs  game_state_recheck.rs  game_summarize.rs  game_tools.rs  game_turn.rs  game_turn_agent.rs  inference.rs  main.rs  message_followups.rs  model_fallback.rs  prompts.rs  queue.rs  scenario_character_state.rs  scenario_db.rs  scenario_import.rs  state_persist.rs  state_recheck.rs  stories_db.rs  story_beat_mechanical.rs  story_beat_prose_recheck.rs  story_prompts.rs  story_state.rs  story_summarize.rs  story_variable_recheck.rs  story_variables.rs  (+6 more)
crates/server/src/routes/: characters.rs  chats.rs  e2e_seed.rs  games.rs  jobs.rs  mod.rs  scenarios.rs  settings.rs  stories.rs
crates/server/tests/fixtures/: iw_board_game_scenario.json  sample_scenario_export.json
deploy/: deployment.yaml  ingress.yaml  keel.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
docs/: game-mode-plan.md  gameplay-elements.md  iw-scenario-import-plan.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: chat-rename.spec.ts  game-turn.spec.ts  iw-import.spec.ts  scenario-import.spec.ts  visibility.spec.ts
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CharacterPanel.tsx  ChatSidebar.tsx  Composer.tsx  FactsPanel.tsx  MessageList.tsx  QueuePanel.tsx  RightPanel.tsx  SettingsPanel.tsx
scripts/: capture-screenshots.mjs  capture-story-textarea-screenshots.mjs  dev-run.sh  e2e-run.sh  package-lock.json  repair-dev-db-after-inference-migration-drop.py  seed-variables-demo.sh
