[package]
name = "dreamwell-frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dreamwell-types = { workspace = true }
yew = { version = "0.21", features = ["csr"] }
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "DomRect", "DomTokenList", "Element", "Event", "EventSource", "File", "FileList", "History", "HtmlElement", "HtmlInputElement", "InputEvent", "Location", "Notification", "NotificationOptions", "NotificationPermission", "Storage", "VisibilityState", "Window"] }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
pulldown-cmark = "0.13"
