[package]
name = "dreamwell-frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dreamwell-types = { workspace = true }
dreamwell-units = { workspace = true }
chrono = { workspace = true }
yew = { version = "0.21", features = ["csr"] }
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "CssStyleDeclaration", "Document", "DomRect", "DomTokenList", "DragEvent", "DataTransfer", "Element", "Event", "EventSource", "File", "FileList", "FocusEvent", "History", "HtmlAnchorElement", "HtmlButtonElement", "HtmlDocument", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement", "InputEvent", "Location", "MediaQueryList", "Navigator", "NodeList", "Notification", "NotificationOptions", "NotificationPermission", "PageTransitionEvent", "Storage", "Url", "VisibilityState", "Window"] }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
pulldown-cmark = "0.13"
regex = "1.12"

[dev-dependencies]
chrono = { workspace = true }
